@@ -1,3 +1,5 @@
+[COLOR yellow][B]v1.5.0[/B][/COLOR]
+* Kodi version update - Added verification if custom Kodi APK/Windows software installed.
 [COLOR yellow][B]v1.4.9[/B][/COLOR]
 * Add support for custom Windows kodi software auto update check (Open browser, direct downloaded commented).
 * Refactor code
